<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.game.GameActivity">

    <ImageView
        android:id="@+id/ivCoin"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="80dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_coin"
        app:layout_constraintBottom_toBottomOf="@id/tvTimer"
        app:layout_constraintEnd_toStartOf="@id/tvBalance"
        app:layout_constraintStart_toEndOf="@id/tvTimer"
        app:layout_constraintTop_toTopOf="@id/tvTimer" />

    <TextView
        android:id="@+id/tvBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@id/ivCoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivCoin"
        app:layout_constraintTop_toTopOf="@id/ivCoin"
        tools:text="10124240" />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/custom_timer"
        android:paddingStart="70dp"
        android:paddingTop="18dp"
        android:paddingEnd="20dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:10" />

    <TextView
        android:id="@+id/tvAttention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringAttention"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/tvTimer"
        app:layout_constraintStart_toStartOf="@id/tvTimer"
        app:layout_constraintTop_toBottomOf="@id/tvTimer" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:overScrollMode="never"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/tvRules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAttention" />


    <TextView
        android:id="@+id/tvRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringRules"
        app:layout_constraintBottom_toTopOf="@id/tvMode"
        app:layout_constraintEnd_toEndOf="@id/tvMode"
        app:layout_constraintStart_toStartOf="@id/tvMode" />

    <TextView
        android:id="@+id/tvMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/stringMode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>